Fix heading sizes and spacing.

--- a/src/panels/ShareModelPanel/share-model.scss
+++ b/src/panels/ShareModelPanel/share-model.scss
@@ -16,9 +16,9 @@
     }
 
     .p-icon--share {
-      margin-right: 1rem;
+      margin-right: 0.5rem;
       position: relative;
-      top: 0.5rem;
+      top: 0.6rem;
     }
 
     &__heading {
